--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="icon" href="icons/output-onlinepngtools.png" type="image/x-icon">
+    <link  rel="icon" href="output-onlinepngtools.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css"/>
     <title>Zerodha - Online stock trading</title>
 </head>
@@ -21,7 +21,7 @@
             <span class="rTop">Product</span >
             <span class="rTop">Pricing</span >
             <span class="rTop">Support</span >
-            <span class="rTop"><img src="icons/menu.png" width="18px" id="menu"/></span >
+            <span class="rTop"><img src="menu.png" width="18px" id="menu"/></span >
         </div>
     </div>
     <hr class="bar"/>
@@ -154,16 +154,16 @@
                 <p style="color: rgb(102, 99, 99); font-size: 12px;">© 2010 - 2024, Zerodha Broking Ltd.</p>
                 <p style="color: rgb(111, 108, 108); font-size: 12px;">All rights reserved.</p>
                 <div>
-                    <span><img src="icons/twitter.png" id="pic"></span>
-                    <span><img src="icons/facebook.png" id="pic" ></span>
-                    <span><img src="icons/instagram.png" id="pic"></span>
-                    <span><img src="icons/linkedin.png" id="pic"></span>
+                    <span><img src="twitter.png" id="pic"></span>
+                    <span><img src="facebook.png" id="pic" ></span>
+                    <span><img src="instagram.png" id="pic"></span>
+                    <span><img src="linkedin.png" id="pic"></span>
                 </div>
                 <hr style="border: .10px solid rgb(248, 246, 246);">
                 <div>
-                    <span><img src="icons/youtube.png" id="pic"></span>
-                    <span><img src="icons/whatsapp.png" id="pic"></span>
-                    <span><img src="icons/telegram.png" id="pic"></span>
+                    <span><img src="youtube.png" id="pic"></span>
+                    <span><img src="whatsapp.png" id="pic"></span>
+                    <span><img src="telegram.png" id="pic"></span>
                 </div>
             </div>
                 
